--- a/client/src/main/resources/client/scenes/CardPopup.fxml
+++ b/client/src/main/resources/client/scenes/CardPopup.fxml
@@ -1,37 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<BorderPane maxHeight="1.7976931348623157E308"
-            xmlns="http://javafx.com/javafx/19"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="client.scenes.CardPopupCtrl"
-            fx:id="root"
-            stylesheets="@../styles/CardPopup.css">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+
+<BorderPane fx:id="root" maxHeight="1.7976931348623157E308" stylesheets="@../styles/CardPopup.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.CardPopupCtrl">
     <bottom>
-        <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER" fx:id="buttonBar">
+        <ButtonBar fx:id="buttonBar" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <buttons>
-                <Button mnemonicParsing="false" onAction="#close" text="Close" fx:id="closeButton"/>
-                <Button mnemonicParsing="false" onAction="#edit" text="Edit" fx:id="editButton" />
-                <Button mnemonicParsing="false" onAction="#close" text="Cancel" fx:id="cancelButton" />
-                <Button mnemonicParsing="false" onAction="#save" text="Save" fx:id="saveButton" />
+                <Button fx:id="closeButton" mnemonicParsing="false" onAction="#close" text="Close" />
+                <Button fx:id="editButton" mnemonicParsing="false" onAction="#edit" text="Edit" />
+            <Button fx:id="deleteButton" mnemonicParsing="false" text="Delete" />
+                <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#close" text="Cancel" />
+                <Button fx:id="saveButton" mnemonicParsing="false" onAction="#save" text="Save" />
             </buttons>
             <BorderPane.margin>
-                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
+                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
             </BorderPane.margin>
         </ButtonBar>
     </bottom>
     <center>
-        <ScrollPane fitToHeight="true" hbarPolicy="NEVER" hmax="0.0" maxHeight="1.7976931348623157E308"
-                    BorderPane.alignment="CENTER">
+        <ScrollPane fitToHeight="true" hbarPolicy="NEVER" hmax="0.0" maxHeight="1.7976931348623157E308" BorderPane.alignment="CENTER">
             <VBox maxHeight="1.7976931348623157E308">
                 <padding>
-                    <Insets bottom="8.0" left="8.0" right="20.0" top="8.0"/>
+                    <Insets bottom="8.0" left="8.0" right="20.0" top="8.0" />
                 </padding>
                 <TextField fx:id="cardTitle">
                     <VBox.margin>
-                        <Insets/>
+                        <Insets />
                     </VBox.margin>
                 </TextField>
                 <TextArea fx:id="cardDescription" prefHeight="100.0" prefWidth="200.0">
