--- a/client/src/main/resources/client/scenes/cardList.fxml
+++ b/client/src/main/resources/client/scenes/cardList.fxml
@@ -9,7 +9,8 @@
 <?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="cardListNode" style="-fx-background-color: none;" xmlns="http://javafx.com/javafx/19"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.CardListViewCtrl">
+            stylesheets="@../styles/cardList.css" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="client.scenes.CardListViewCtrl">
    <BorderPane minWidth="-Infinity" prefHeight="200.0" prefWidth="250.0"
                style="-fx-background-color: #333333; -fx-border-radius: 5; -fx-background-radius: 5;"
                AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="10.0"
@@ -26,17 +27,16 @@
                </font>
             </Text>
             <Button id="addCardButton" fx:id="addCardButton" layoutX="139.0" layoutY="-3.0" mnemonicParsing="false"
-                    style="-fx-background-color: none; -fx-border-color: #dadada; -fx-border-radius: 3;" text="+"
-                    textFill="#dadada" AnchorPane.bottomAnchor="3.0" AnchorPane.rightAnchor="40.0"
+                    text="+" textFill="#dadada" AnchorPane.bottomAnchor="3.0" AnchorPane.rightAnchor="40.0"
                     AnchorPane.topAnchor="3.0">
                <font>
                   <Font name="System Bold" size="12.0"/>
                </font>
             </Button>
-            <Button id="editCardButton" fx:id="editButton" layoutX="174.0" layoutY="4.0" mnemonicParsing="false"
-                    style="-fx-background-color: none; -fx-border-color: #dadada; -fx-border-radius: 3;" text="E"
+            <Button id="editButton" fx:id="editButton" layoutX="174.0" layoutY="4.0" mnemonicParsing="false"
+                    text="E"
                     textFill="#dadada" AnchorPane.bottomAnchor="3.0" AnchorPane.rightAnchor="5.0"
-                    AnchorPane.topAnchor="3.0"/>
+                    AnchorPane.topAnchor="3.0"  onMouseClicked="#showRenameList"/>
          </AnchorPane>
       </top>
       <center>
