--- a/client/src/main/resources/client/scenes/DeleteCard.fxml
+++ b/client/src/main/resources/client/scenes/DeleteCard.fxml
@@ -6,20 +6,23 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.DeleteCardCtrl">
-    <Label layoutX="56.0" layoutY="65.0" prefHeight="154.0" prefWidth="489.0" text="Are you sure you want to delete this card?" wrapText="true">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="client.scenes.DeleteCardCtrl">
+    <Label layoutX="56.0" layoutY="65.0" prefHeight="154.0" prefWidth="489.0"
+           text="Are you sure you want to delete this card?" wrapText="true">
         <font>
-          <Font size="48.0" />
+            <Font size="48.0"/>
         </font>
     </Label>
     <Button layoutX="426.0" layoutY="320.0" mnemonicParsing="false" onAction="#deleteCard" text="Delete">
         <font>
-            <Font size="24.0" />
+            <Font size="24.0"/>
         </font>
     </Button>
     <Button layoutX="300.0" layoutY="320.0" mnemonicParsing="false" onAction="#closeConfirmation" text="Cancel">
         <font>
-          <Font size="24.0" />
+            <Font size="24.0"/>
         </font>
     </Button>
 </AnchorPane>
