--- a/client/src/main/resources/client/scenes/RenameListPopup.fxml
+++ b/client/src/main/resources/client/scenes/RenameListPopup.fxml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="1.7976931348623157E308" xmlns="http://javafx.com/javafx/19"
-            fx:controller="client.scenes.RenameListPopupCtrl"
-            fx:id="root">
+
+<BorderPane fx:id="root" maxHeight="1.7976931348623157E308" xmlns="http://javafx.com/javafx/17.0.2-ea"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.RenameListPopupCtrl">
     <bottom>
         <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <buttons>
-                <Button mnemonicParsing="false" onAction="#close" text="Cancel"/>
-                <Button mnemonicParsing="false" onAction="#save" text="Save"/>
+            <Button mnemonicParsing="false" onAction="#delete" text="Delete" />
+                <Button mnemonicParsing="false" onAction="#close" text="Cancel" />
+                <Button mnemonicParsing="false" onAction="#save" text="Save" />
             </buttons>
             <BorderPane.margin>
-                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
+                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
             </BorderPane.margin>
         </ButtonBar>
     </bottom>
     <center>
-        <ScrollPane fitToHeight="true" hbarPolicy="NEVER" hmax="0.0" maxHeight="1.7976931348623157E308"
-                    BorderPane.alignment="CENTER">
+        <ScrollPane fitToHeight="true" hbarPolicy="NEVER" hmax="0.0" maxHeight="1.7976931348623157E308" BorderPane.alignment="CENTER">
             <VBox maxHeight="1.7976931348623157E308">
                 <padding>
-                    <Insets bottom="8.0" left="8.0" right="20.0" top="8.0"/>
+                    <Insets bottom="8.0" left="8.0" right="20.0" top="8.0" />
                 </padding>
                 <TextField fx:id="listTitle" prefHeight="26.0" prefWidth="222.0">
                     <VBox.margin>
-                        <Insets/>
+                        <Insets />
                     </VBox.margin>
                 </TextField>
             </VBox>
