--- a/client/src/main/resources/client/scenes/CardPopup.fxml
+++ b/client/src/main/resources/client/scenes/CardPopup.fxml
@@ -20,7 +20,7 @@
                 <Button fx:id="editButton" mnemonicParsing="false" onAction="#edit" text="Edit" />
             <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#showDeleteConfirmation" text="Delete" />
                 <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#close" text="Cancel" />
-                <Button fx:id="saveButton" mnemonicParsing="false" onAction="#save" text="Save" />
+                <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveCardChanges" text="Save" />
             </buttons>
             <BorderPane.margin>
                 <Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
