--- a/client/src/main/resources/client/scenes/DeleteCard.fxml
+++ b/client/src/main/resources/client/scenes/DeleteCard.fxml
@@ -5,24 +5,20 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="client.scenes.DeleteCardCtrl">
-    <Label layoutX="56.0" layoutY="65.0" prefHeight="154.0" prefWidth="489.0"
-           text="Are you sure you want to delete this card?" wrapText="true">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #555555; -fx-border-color: #333333; -fx-border-width: 5px;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.DeleteCardCtrl">
+    <Label layoutX="56.0" layoutY="65.0" prefHeight="154.0" prefWidth="489.0" text="Are you sure you want to delete this card?" textAlignment="CENTER" textFill="WHITE" wrapText="true">
         <font>
-            <Font size="48.0"/>
+            <Font size="48.0" />
         </font>
     </Label>
-    <Button layoutX="426.0" layoutY="320.0" mnemonicParsing="false" onAction="#deleteCard" text="Delete">
+    <Button layoutX="312.0" layoutY="281.0" mnemonicParsing="false" onAction="#deleteCard" style="-fx-background-color: #ed0000;" text="Delete">
         <font>
-            <Font size="24.0"/>
+            <Font size="24.0" />
         </font>
     </Button>
-    <Button layoutX="300.0" layoutY="320.0" mnemonicParsing="false" onAction="#closeConfirmation" text="Cancel">
+    <Button layoutX="186.0" layoutY="281.0" mnemonicParsing="false" onAction="#closeConfirmation" style="-fx-background-color: #c9c9c9;" text="Cancel">
         <font>
-            <Font size="24.0"/>
+            <Font size="24.0" />
         </font>
     </Button>
 </AnchorPane>
